Fixed formatting on mobile

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -6,7 +6,7 @@ body {
     position: relative;
     left: 200px;
     display: none;
-    margin-right: -50px;
+    margin-right: 20px;
     user-select: none;
 }
 
