--- a/mobile.css
+++ b/mobile.css
@@ -9,7 +9,6 @@ body {
     margin-left: auto;
     width: 300px;
     height: 0px;
-    position: inherit;
     right: 5.6%;
     bottom: 30px;
     margin-bottom: 7px;
@@ -23,7 +22,6 @@ body {
     margin-left: auto;
     width: 300px;
     height: 0px;
-    position: inherit;
     right: 5.6%;
     bottom: 30px;
     margin-bottom: 7px;
@@ -37,7 +35,6 @@ body {
     margin-left: auto;
     width: 300px;
     height: 0px;
-    position: inherit;
     right: 5.6%;
     bottom: 30px;
     margin-bottom: 7px;
@@ -49,9 +46,11 @@ body {
     height: 100px;
 }
 
-#box1body {
+#box1 {
     text-align: center;
     font-size: 11px;
+    position: relative;
+    right: 3px;
     margin: auto;
 }
 
@@ -59,5 +58,7 @@ body {
     display: none;
     text-align: center;
     font-size: 11px;
+    position: relative;
+    right: 3px;
     margin: auto;
 }
